public/css/header.css
body {
    font-family: "Lato", Arial;
    margin: 0px;
}

#page-header {
    align-items: center;
    box-sizing: border-box;
    padding: 0 10%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    border-bottom: 1px solid #e7e7e7;
    background-color: #fff;
    height: 71px;
}
.nav a {
    color: #777;
    text-decoration: none;
}
.nav:hover {
    text-decoration: none;
}
#page-header .left {
    flex-grow: 1;
}
.logo {
    width: 320px;
    padding: 9px;
    font-size: 29px;
    text-align: right;
    font-weight: bold;
    background-size: contain;
    color: #0A2A66;
    background-image: url(/static/images/ka-logo.png);
    background-position: left center;
    background-repeat: no-repeat;
    text-decoration: none;
}
.logo:hover {
    text-decoration: none;
}
.nav.user {
    position: relative;
    cursor: pointer;
}
.user span:hover {
    text-decoration: underline;
}
.dropdown {
    position: absolute;
    background: #fff;
    display: none;
    flex-direction: column;
    padding: 10px 0;
    margin-top: 20px;
    box-shadow: 0px 1px 5px #999;
    border-radius: 3px;
    min-width: 200px;
    right: 0;
    left: auto;
    z-index: 1;
}
.dropdown.open {
    display: flex;
}
.dropdown::before {
    content: "";
    position: absolute;
    left: auto;
    right: 9px;
    top: -7px;
    border-right: 7px solid transparent;
    border-bottom: 7px solid #d8d8d8;
    border-left: 7px solid transparent;
}
.dropdown::after {
    content: "";
    position: absolute;
    left: auto;
    right: 10px;
    top: -6px;
    border-right: 6px solid transparent;
    border-bottom: 6px solid #fff;
    border-left: 6px solid transparent;
}
.dropdown-option {
    padding: 7px 0 7px 20px;
    font-size: 16px;
}
.dropdown-option:hover {
    background-color: #eee;
    text-decoration: none;
}


.button {
    color: #fff;
    border: 0;
    cursor: pointer;
    display: block;
    font-size: 16px;
    padding: 10px 24px;
    border-radius: 4px;
    transition: box-shadow 0.1s linear;
}
.button.green {
    background-color: #54820a;
}
.button.red {
    background-color: #a94442;
}

.button:hover {
    box-shadow: 0px 1px 6px grey;
}

